2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-01-20  Andreas Kupries  <andreask@activestate.com>

	* ftpd.tcl (::ftpd::command::RNTO): [Bug 2928355]: Fixed the
	  missing import of the server's state array, reported by Martin
	  <martinao@users.sourceforge.net>.

	* ftpd.tcl (::ftpd::config): [Bug 2935339] [Patch 2935347]:
	* ftpd.man: Applied the patch by Keith Vetter
	* pkgIndex.tcl: <keithv@users.sourceforge.net>, fixing the
	  non-idempotency of the config command. Bumped the package
	  version to 1.2.5.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-02-29  Andreas Kupries  <andreask@activestate.com>

	* ftpd.tcl: Renamed ::ftpd::read -> ftp::Read to prevent clash
	* ftpd.man: with Tcl's builtin command. Version bumped to 1.2.4.
	* pkgIndex.tcl:

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* ftpd.tcl: Fix for [SF Tcllib Bug 1720144]. Version
	* ftpd.man: of the package bumped to 1.2.3.
	* pkgIndex.tcl:

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*